# personal_soc

./: README.md  package.json
apps/desktop-ui/: vite.config.ts
apps/desktop-ui/src/: App.tsx
apps/desktop-ui/src/components/: AssistantSignalContext.tsx  GlobalAssistant.tsx  Layout.tsx
apps/desktop-ui/src/lib/: invoke.ts
apps/desktop-ui/src/pages/: AlertsPage.tsx  DashboardPage.tsx  EventsPage.tsx  MaliciousLinkDetectorPage.tsx  PasswordManagerPage.tsx  PhishingDetectorPage.tsx  ProcessDetailPage.tsx  SettingsPage.tsx
apps/desktop-ui/src/types/: index.ts
apps/tauri-shell/src-tauri/: .env.example  Cargo.toml  build.rs  tauri.conf.json
apps/tauri-shell/src-tauri/src/: browser_bridge.rs  commands.rs  credential_vault.rs  lib.rs  password.rs  state.rs  tray.rs  url_scanner.rs  virustotal.rs
crates/ai-explainer/src/: client.rs  context_builder.rs  prompts.rs
crates/monitor-core/src/: lib.rs
crates/monitor-core/src/collectors/: metrics_collector.rs  mod.rs  process_collector.rs  startup_collector.rs
crates/monitor-core/src/persistence/: database.rs  migrations.rs  mod.rs
crates/monitor-core/src/rules/: catalog.rs  engine.rs  mod.rs
crates/monitor-core/src/scoring/: mod.rs
crates/monitor-core/src/services/: monitor_service.rs
crates/shared-types/src/: events.rs  lib.rs
extensions/chrome-threat-guard/: README.md  background.js  content.js  manifest.json  popup.css  popup.html  popup.js
