[package]
name = "threat-guard"
version = "0.1.0"
edition = "2021"

[lib]
name = "threat_guard_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[dependencies]
monitor-core = { path = "../../../crates/monitor-core" }
ai-explainer = { path = "../../../crates/ai-explainer" }
shared-types = { path = "../../../crates/shared-types" }
tauri = { version = "2", features = ["tray-icon", "image-png"] }
tauri-plugin-shell = "2"
tauri-plugin-notification = "2"
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
reqwest = { workspace = true }
base64 = "0.22"
sha1 = "0.10"
sha2 = { workspace = true }
hex = { workspace = true }
url = "2"
dirs = "5"

[target.'cfg(windows)'.dependencies]
windows = { version = "0.58", features = [
    "Win32_Foundation",
    "Win32_Security_Cryptography",
    "Win32_System_Memory",
] }

[build-dependencies]
tauri-build = { version = "2", features = [] }
